--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -14,7 +14,7 @@ env:
 
 jobs:
   clippy-rustdoc:
-    name: Clippy & Rustdoc
+    name: Clippy & Rustdoc ${{ matrix.target.description }} ${{ matrix.rust.description }}
 
     runs-on: ubuntu-latest
 
@@ -22,19 +22,19 @@ jobs:
       fail-fast: false
       matrix:
         target:
-          - x86_64-unknown-linux-gnu
-          - wasm32-unknown-unknown
+          - { target: x86_64-unknown-linux-gnu, description: Native }
+          - { target: wasm32-unknown-unknown, description: Web }
         rust:
           - { version: stable }
         include:
-          - target: wasm32-unknown-unknown
+          - target: { target: wasm32-unknown-unknown, description: Web }
             rust: {
               version: nightly,
+              description: with Atomics,
               component: ",rust-src",
               flags: "-Ctarget-feature=+atomics,+bulk-memory",
               docflags: "--cfg=docsrs",
               args: "-Zbuild-std=panic_abort,std",
-              docargs: "-Zdoctest-xcompile",
             }
 
     steps:
@@ -42,15 +42,15 @@ jobs:
         uses: actions/checkout@v4
       - name: Install Rust
         run: |
-          rustup toolchain install ${{ matrix.rust.version }} --profile minimal --component clippy${{ matrix.rust.component }} --allow-downgrade --target ${{ matrix.target }}
+          rustup toolchain install ${{ matrix.rust.version }} --profile minimal --component clippy${{ matrix.rust.component }} --allow-downgrade --target ${{ matrix.target.target }}
           rustup default ${{ matrix.rust.version }}
       - name: Run Clippy
         env:
           RUSTFLAGS: ${{ matrix.rust.flags }}
-        run: cargo clippy --all-targets --target ${{ matrix.target }} ${{ matrix.rust.args }} -- -D warnings
+        run: cargo clippy --all-targets --target ${{ matrix.target.target }} ${{ matrix.rust.args }} -- -D warnings
       - name: Run Rustdoc
         env:
           RUSTDOCFLAGS: -D warnings ${{ matrix.rust.flags }} ${{ matrix.rust.docflags }}
           RUSTFLAGS: ${{ matrix.rust.flags }}
         run: |
-          cargo doc --no-deps --document-private-items --lib --examples --target ${{ matrix.target }} ${{ matrix.rust.args }} ${{ matrix.rust.docargs }}
+          cargo doc --no-deps --document-private-items --lib --examples --target ${{ matrix.target.target }} ${{ matrix.rust.args }}
