--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,7 +33,6 @@ jobs:
               description: with Atomics,
               component: ",rust-src",
               flags: "-Ctarget-feature=+atomics,+bulk-memory",
-              docflags: "--cfg=docsrs",
               args: "-Zbuild-std=panic_abort,std",
             }
 
@@ -50,7 +49,44 @@ jobs:
         run: cargo clippy --all-targets --target ${{ matrix.target.target }} ${{ matrix.rust.args }} -- -D warnings
       - name: Run Rustdoc
         env:
-          RUSTDOCFLAGS: -D warnings ${{ matrix.rust.flags }} ${{ matrix.rust.docflags }}
+          RUSTDOCFLAGS: -D warnings ${{ matrix.rust.flags }}
+          RUSTFLAGS: ${{ matrix.rust.flags }}
+        run: |
+          cargo doc --no-deps --document-private-items --lib --examples --target ${{ matrix.target.target }} ${{ matrix.rust.args }}
+
+  rustdoc-docsrs:
+    name: Rustdoc (docsrs) ${{ matrix.target.description }} ${{ matrix.rust.description }}
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      fail-fast: false
+      matrix:
+        target:
+          - { target: x86_64-unknown-linux-gnu, description: Native }
+          - { target: wasm32-unknown-unknown, description: Web }
+        rust:
+          - { version: nightly }
+        include:
+          - target: { target: wasm32-unknown-unknown, description: Web }
+            rust: {
+              version: nightly,
+              description: with Atomics,
+              component: --component rust-src,
+              flags: "-Ctarget-feature=+atomics,+bulk-memory",
+              args: "-Zbuild-std=panic_abort,std",
+            }
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Install Rust
+        run: |
+          rustup toolchain install ${{ matrix.rust.version }} --profile minimal ${{ matrix.rust.component }} --allow-downgrade --target ${{ matrix.target.target }}
+          rustup default ${{ matrix.rust.version }}
+      - name: Run Rustdoc
+        env:
+          RUSTDOCFLAGS: -D warnings --cfg=docsrs ${{ matrix.rust.flags }}
           RUSTFLAGS: ${{ matrix.rust.flags }}
         run: |
           cargo doc --no-deps --document-private-items --lib --examples --target ${{ matrix.target.target }} ${{ matrix.rust.args }}
