--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,10 @@ wasm-bindgen-test = "0.3"
 web-sys = { version = "0.3", features = ["console"] }
 web-time = "1"
 
+[target.'cfg(all(target_family = "wasm", target_os = "unknown", target_feature = "atomics"))'.dev-dependencies]
+atomic-waker = "1"
+futures-util = { version = "0.3", default-features = false }
+
 [patch.crates-io]
 js-sys = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "web-thread" }
 wasm-bindgen = { git = "https://github.com/daxpedda/wasm-bindgen", branch = "web-thread" }
@@ -87,6 +91,11 @@ test = false
 [[test]]
 name = "unsupported_block"
 path = "tests/unsupported_block.rs"
+test = false
+
+[[test]]
+name = "util"
+path = "tests/util.rs"
 test = false
 
 [package.metadata.docs.rs]
