--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,17 +37,19 @@ web-sys = { version = "0.3.65", features = [
 [dev-dependencies]
 static_assertions = "1"
 
-[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dev-dependencies]
+[target.'cfg(not(target_family = "wasm"))'.dev-dependencies]
 pollster = { version = "0.3", features = ["macro"] }
 ui_test = { git = "https://github.com/daxpedda/ui_test", branch = "web-thread" }
 
-[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dev-dependencies]
+[target.'cfg(target_family = "wasm")'.dev-dependencies]
 console_error_panic_hook = "0.1"
+wasm-bindgen-futures = "0.4"
 wasm-bindgen-test = "0.3"
 web-sys = { version = "0.3", features = ["console"] }
 web-time = "1"
 
-[target.'cfg(all(target_family = "wasm", target_os = "unknown", target_feature = "atomics"))'.dev-dependencies]
+[target.'cfg(all(target_family = "wasm", target_feature = "atomics"))'.dev-dependencies]
+async-channel = "2"
 atomic-waker = "1"
 futures-util = { version = "0.3", default-features = false }
 
