--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,16 @@ repository = "https://github.com/daxpedda/web-thread"
 rust-version = "1.70"
 version = "0.0.0"
 
+[features]
+audio-worklet = [
+	"web-sys/AudioContextState",
+	"web-sys/AudioWorklet",
+	"web-sys/AudioWorkletNode",
+	"web-sys/AudioWorkletNodeOptions",
+	"web-sys/BaseAudioContext",
+	"web-sys/DomException",
+]
+
 [target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
 js-sys = "0.3.65"
 pin-project = "1"
@@ -25,7 +35,7 @@ web-sys = { version = "0.3.65", features = [
 [target.'cfg(all(target_family = "wasm", target_os = "unknown", target_feature = "atomics"))'.dependencies]
 atomic-waker = "1"
 wasm-bindgen-futures = "0.4.38"
-web-sys = { version = "0.3.65", features = [
+web-sys = { version = "0.3", features = [
 	"Blob",
 	"BlobPropertyBag",
 	"Url",
@@ -42,7 +52,6 @@ pollster = { version = "0.3", features = ["macro"] }
 ui_test = { git = "https://github.com/daxpedda/ui_test", branch = "web-thread" }
 
 [target.'cfg(target_family = "wasm")'.dev-dependencies]
-console_error_panic_hook = "0.1"
 wasm-bindgen-futures = "0.4"
 wasm-bindgen-test = "0.3"
 web-sys = { version = "0.3", features = ["console"] }
@@ -51,6 +60,7 @@ web-time = "1"
 [target.'cfg(all(target_family = "wasm", target_feature = "atomics"))'.dev-dependencies]
 async-channel = "2"
 atomic-waker = "1"
+console_error_panic_hook = "0.1"
 futures-util = { version = "0.3", default-features = false }
 
 [patch.crates-io]
@@ -101,6 +111,7 @@ path = "tests/util.rs"
 test = false
 
 [package.metadata.docs.rs]
+all-features = true
 rustdoc-args = ["--cfg=docsrs"]
 targets = ["wasm32-unknown-unknown"]
 
